fix vw to % for no horizontal scrolling

--- a/dash.css
+++ b/dash.css
@@ -20,7 +20,7 @@ body{
     grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(40px, 1fr));
     gap: 15px;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     outline: 2px solid white;
 }
